--- a/kubernetes/varnish.yaml
+++ b/kubernetes/varnish.yaml
@@ -1,9 +1,14 @@
-apiVersion: extensions/v1beta1
-kind: Deployment
+apiVersion: apps/v1
+kind: StatefulSet
 metadata:
   name: varnish
 spec:
+  selector:
+    matchLabels:
+      app: varnish
   replicas: 2
+  podManagementPolicy: Parallel # Needed to launch all pods in parallel so that DNS starts resolving
+  serviceName: varnish
   template:
     metadata:
       labels:
@@ -50,3 +55,21 @@ spec:
           limits:
             memory: 2.5Gi
             cpu: 0.25
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    # Needed for the DNS to resolve before liveness/readiness has occured
+    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
+  name: varnish
+  labels:
+    app: varnish
+spec:
+  clusterIP: None
+  selector:
+    app: varnish
+  ports:
+  - port: 80
+    name: varnish
