Update kubernetes config

--- a/kubernetes/image-service.yaml
+++ b/kubernetes/image-service.yaml
@@ -1,9 +1,12 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: image-service
 spec:
   replicas: 2
+  selector:
+    matchLabels:
+      app: image-service
   template:
     metadata:
       labels:
@@ -19,7 +22,7 @@ spec:
           requests:
             cpu: 2
           limits:
-            memory: 1Gi
+            memory: 512Mi
             cpu: 3
         livenessProbe:
           httpGet:
