--- a/kubernetes/nginx-ingress.yaml
+++ b/kubernetes/nginx-ingress.yaml
@@ -1,5 +1,5 @@
 # Based on https://raw.githubusercontent.com/kubernetes/ingress-nginx/nginx-0.26.1/deploy/static/mandatory.yaml
-# Modified to add default-ssl-certificate, and more replicas
+# Modified to add default-ssl-certificate
 
 apiVersion: v1
 kind: Namespace
@@ -199,7 +199,7 @@ metadata:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app.kubernetes.io/name: ingress-nginx
