--- a/kubernetes/external-dns.yaml
+++ b/kubernetes/external-dns.yaml
@@ -3,7 +3,7 @@ kind: ServiceAccount
 metadata:
   name: external-dns
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: external-dns
@@ -16,9 +16,9 @@ rules:
   verbs: ["get","watch","list"]
 - apiGroups: [""]
   resources: ["nodes"]
-  verbs: ["list"]
+  verbs: ["list", "watch"]
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: external-dns-viewer
@@ -36,11 +36,11 @@ kind: Deployment
 metadata:
   name: external-dns
 spec:
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: external-dns
-  strategy:
-    type: Recreate
   template:
     metadata:
       labels:
@@ -49,7 +49,7 @@ spec:
       serviceAccountName: external-dns
       containers:
       - name: external-dns
-        image: registry.opensource.zalan.do/teapot/external-dns:latest
+        image: k8s.gcr.io/external-dns/external-dns:v0.7.6
         args:
         - --source=service
         - --provider=cloudflare
