--- a/kubernetes/unsplash-redirect-ingress.yaml
+++ b/kubernetes/unsplash-redirect-ingress.yaml
@@ -1,8 +1,9 @@
+apiVersion: networking.k8s.io/v1
 kind: Ingress
-apiVersion: extensions/v1beta1
 metadata:
   name: unsplash-redirect-ingress
   annotations:
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
     nginx.ingress.kubernetes.io/auth-tls-secret: "default/cloudflare-ca"
     nginx.ingress.kubernetes.io/configuration-snippet: |
