--- a/containers/Dockerfile
+++ b/containers/Dockerfile
@@ -7,10 +7,17 @@ RUN apk add --update --repository http://dl-cdn.alpinelinux.org/alpine/edge/test
       gcc \
       musl-dev
 
-ADD . /image-service
-WORKDIR /image-service
+ADD . /picsum-photos
+WORKDIR /picsum-photos
 
-RUN go install ./cmd/image-service
+RUN go install ./...
+
+FROM node:16.14-alpine as nodebuilder
+
+ADD ./web /web
+WORKDIR /web
+
+RUN npm ci && npm run-script build
 
 
 FROM alpine:3.16
@@ -18,5 +25,7 @@ FROM alpine:3.16
 RUN apk add --no-cache --repository http://dl-cdn.alpinelinux.org/alpine/edge/testing vips ca-certificates
 
 WORKDIR /app
+COPY --from=gobuilder /go/bin/picsum-photos .
 COPY --from=gobuilder /go/bin/image-service .
-CMD ["./image-service"]
+COPY --from=nodebuilder /web/dist dist
+CMD ["./picsum-photos"]
