--- a/kubernetes/charts/picsum-photos/templates/ingress.yaml
+++ b/kubernetes/charts/picsum-photos/templates/ingress.yaml
@@ -4,6 +4,10 @@ metadata:
   name: picsum-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
+{{- if .Values.cloudflareEnabled }}
+    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
+    nginx.ingress.kubernetes.io/auth-tls-secret: "default/cloudflare-ca"
+{{- end }}
 spec:
   tls:
     - hosts:
@@ -29,16 +33,3 @@ spec:
             port:
               number: 8081
         pathType: ImplementationSpecific
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: nginx-configuration
-  namespace: ingress-nginx
-  labels:
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
-data:
-  use-forwarded-headers: "true"
-  hsts: "false"
-  allow-snippet-annotations: "true"
