Disable more resources for local dev

--- a/kubernetes/charts/picsum-photos/templates/external-dns.yaml
+++ b/kubernetes/charts/picsum-photos/templates/external-dns.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.externalDNSEnabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -59,3 +60,4 @@ spec:
             secretKeyRef:
               name: external-dns
               key: cf_api_token
+{{- end }}
