Add grafana-agent for metrics and logs

--- a/kubernetes/charts/picsum-photos/templates/image-service.yaml
+++ b/kubernetes/charts/picsum-photos/templates/image-service.yaml
@@ -11,6 +11,10 @@ spec:
     metadata:
       labels:
         app: image-service
+      annotations:
+        observability/scrape: 'true'
+        observability/port: '8081'
+        observability/path: '/metrics'
     spec:
       imagePullSecrets:
       - name: picsum-registry
