--- a/kubernetes/environments/local.yaml
+++ b/kubernetes/environments/local.yaml
@@ -1,9 +1,11 @@
 picsumReplicas: 1
 picsumRootURL: "http://localhost:8080"
 picsumImageServiceURL: "http://localhost:8081"
+picsumLogLevel: "debug"
 
 imageServiceReplicas: 1
 imageServiceStorageSpacesForcePathStyle: true
+imageServiceLogLevel: "debug"
 
 # Use separate docker image references to make Tilt work with hot-reload commands
 picsumPhotosDockerImage: 'picsum-registry/picsum-photos'
