--- a/kubernetes/charts/picsum-photos/templates/image-service.yaml
+++ b/kubernetes/charts/picsum-photos/templates/image-service.yaml
@@ -47,6 +47,8 @@ spec:
           timeoutSeconds: 10
           periodSeconds: 10
         env:
+          - name: OTEL_EXPORTER_OTLP_ENDPOINT
+            value: "http://grafana-agent.observability.svc:4317"
           - name: IMAGE_CACHE
             value: "redis"
           - name: IMAGE_CACHE_REDIS_ADDRESS
