--- a/kubernetes/charts/observability/templates/grafana-agent-config.yaml
+++ b/kubernetes/charts/observability/templates/grafana-agent-config.yaml
@@ -18,6 +18,19 @@ data:
             username: ${GRAFANA_USERNAME}
             password: ${GRAFANA_PASSWORD}
         scrape_configs:
+        - job_name: spanmetrics
+          static_configs:
+            - targets: ['127.0.0.1:81']
+          metric_relabel_configs:
+            - source_labels: [operation]
+              target_label: span_name
+            - source_labels: [service_name]
+              target_label: service
+            - regex: operation
+              action: labeldrop
+            - regex: service_name
+              action: labeldrop
+
         - job_name: "kubernetes-pods"
           kubernetes_sd_configs:
             - role: pod
@@ -43,22 +56,47 @@ data:
               action: replace
               target_label: pod
 
-    integrations:
-      eventhandler:
-        cache_path: /var/lib/agent/eventhandler.cache
-        logs_instance: integrations
-    logs:
+    traces:
       configs:
-      - name: integrations
-        clients:
-        - url: https://logs-prod-eu-west-0.grafana.net/loki/api/v1/push
+      - name: default
+
+        spanmetrics:
+          handler_endpoint: '0.0.0.0:81'
+          latency_histogram_buckets: [10ms, 25ms, 50ms, 100ms, 250ms, 500ms, 1s, 2500ms, 3s, 4s, 5s, 10s, 30s, 45s]
+
+        tail_sampling:
+          policies:
+            - name: errors
+              type: status_code
+              status_code:
+                status_codes:
+                  - ERROR
+            - name: slow
+              type: latency
+              latency:
+                threshold_ms: 1000
+            - name: probabilistic
+              type: probabilistic
+              probabilistic:
+                sampling_percentage: 10
+
+        remote_write:
+        - endpoint: tempo-eu-west-0.grafana.net:443
           basic_auth:
-            username: ${GRAFANA_LOGS_USERNAME}
+            username: ${GRAFANA_TRACES_USERNAME}
             password: ${GRAFANA_PASSWORD}
-          external_labels:
-            cluster: cloud
-            job: integrations/kubernetes/eventhandler
-        positions:
-          filename: /tmp/positions.yaml
-        target_config:
-          sync_period: 10s
+        receivers:
+          otlp:
+            protocols:
+              grpc:
+        scrape_configs:
+        - job_name: "kubernetes-pods"
+          kubernetes_sd_configs:
+            - role: pod
+          relabel_configs:
+            - source_labels: [__meta_kubernetes_namespace]
+              action: replace
+              target_label: namespace
+            - source_labels: [__meta_kubernetes_pod_name]
+              action: replace
+              target_label: pod
