--- a/kubernetes/charts/observability/templates/grafana-agent.yaml
+++ b/kubernetes/charts/observability/templates/grafana-agent.yaml
@@ -97,12 +97,19 @@ spec:
             secretKeyRef:
               name: grafana-cloud
               key: logs_username
-        image: grafana/agent:v0.27.1
+        - name: GRAFANA_TRACES_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: grafana-cloud
+              key: traces_username
+        image: grafana/agent:v0.29.0
         imagePullPolicy: IfNotPresent
         name: grafana-agent
         ports:
         - containerPort: 80
           name: http-metrics
+        - containerPort: 4317
+          name: otlp
         volumeMounts:
         - mountPath: /var/lib/agent
           name: agent-wal
@@ -117,3 +124,14 @@ spec:
         emptyDir: {}
   updateStrategy:
     type: RollingUpdate
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: grafana-agent
+spec:
+  ports:
+  - port: 4317
+    name: otlp
+  selector:
+    name: grafana-agent
